Actions
Bug #3100
closedzvol rename fails with EBUSY when dirty
Start date:
2012-08-20
Due date:
% Done:
90%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
When renaming a zvol we need to sync out dirty data first.
Updated by Eric Schrock over 9 years ago
- Status changed from In Progress to Resolved
changeset: 13780:6da32a929222
tag: tip
user: Matthew Ahrens <mahrens@delphix.com>
date: Fri Aug 24 07:12:46 2012 -0700
description:
3100 zvol rename fails with EBUSY when dirty
3103 zfs mdb module may get wrong refcount struct
Reviewed by: Christopher Siden <chris.siden@delphix.com>
Reviewed by: Adam H. Leventhal <ahl@delphix.com>
Reviewed by: George Wilson <george.wilson@delphix.com>
Reviewed by: Garrett D'Amore <garrett@damore.org>
Approved by: Eric Schrock <eric.schrock@delphix.com>
Actions